--- a/src/minshell.html
+++ b/src/minshell.html
@@ -31,6 +31,7 @@
     <link rel="shortcut icon" href="https://www.raylib.com/favicon.ico">
     
     <style>
+        body { margin: 0px; }
         canvas.emscripten { border: 0px none; background-color: black; }
     </style>
     <script type='text/javascript' src="https://cdn.jsdelivr.net/gh/eligrey/FileSaver.js/dist/FileSaver.min.js"> </script>
