Fix compositing mixing with framebuffer for web and ANGLE

--- a/src/minshell.html
+++ b/src/minshell.html
@@ -32,7 +32,7 @@
 
     <style>
         body { margin: 0px; }
-        canvas.emscripten { border: 0px none; background-color: black; }
+        canvas.emscripten { border: 0px none; }
     </style>
     <script type='text/javascript' src="https://cdn.jsdelivr.net/gh/eligrey/FileSaver.js/dist/FileSaver.min.js"> </script>
     <script type='text/javascript'>
