--- a/src/shell.html
+++ b/src/shell.html
@@ -8,10 +8,11 @@
 
     <meta name="title" content="raylib web game">
     <meta name="description" content="New raylib web videogame, developed using raylib videogames library">
-    <meta name="keywords" content="raylib, games, html5, programming, C, C++, library, learn, videogames">
+    <meta name="keywords" content="raylib, programming, examples, html5, C, C++, library, learn, games, videogames">
     <meta name="viewport" content="width=device-width">
 
     <!-- Open Graph metatags for sharing -->
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="raylib web game">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image" content="https://www.raylib.com/common/img/raylib_logo.png">
@@ -20,12 +21,12 @@
     <meta property="og:description" content="New raylib web videogame, developed using raylib videogames library">
 
     <!-- Twitter metatags for sharing -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@raysan5">
     <meta name="twitter:title" content="raylib web game">
     <meta name="twitter:image" content="https://www.raylib.com/common/raylib_logo.png">
     <meta name="twitter:url" content="https://www.raylib.com/games.html">
-    <meta name="twitter:description" content="New raylib web game, developed using raylib videogames library">
+    <meta name="twitter:description" content="New raylib web videogame, developed using raylib videogames library">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="https://www.raylib.com/favicon.ico">
