--- a/src/shell.html
+++ b/src/shell.html
@@ -15,8 +15,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="raylib web game">
     <meta property="og:image:type" content="image/png">
-    <meta property="og:image" content="https://www.raylib.com/common/img/raylib_logo.png">
-    <meta property="og:site_name" content="raylib.com">
+    <meta property="og:image" content="https://www.raylib.com/common/raylib_logo.png">
+    <meta property="og:site_name" content="raylib - example">
     <meta property="og:url" content="https://www.raylib.com/games.html">
     <meta property="og:description" content="New raylib web videogame, developed using raylib videogames library">
 
